# BlockchainRust

./: Cargo.toml
contracts/counter/: Cargo.toml  lib.rs
src/: main.rs
src/data/: block.rs  blockchain.rs  mod.rs  user.rs
src/models/: transaction.rs
src/network/: mod.rs  peerCommClient.rs  peerCommServer.rs  peerDiscovery.rs
src/utility/: encryption.rs  get_user_balance.rs  mod.rs
